--- a/dist.ini
+++ b/dist.ini
@@ -11,3 +11,11 @@ RELEASE_TESTING=0
 
 [Prereqs]
 Date::Calc=0
+
+
+[MetaResources]
+repository.web = https://github.com/abbypan/Time-Sequence
+repository.url = https://github.com/abbypan/Time-Sequence.git
+repository.type = git
+ 
+[MetaJSON]
